--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,8 @@
     <script type="text/javascript">
     	window.fbAsyncInit = function() {
           FB.init({
-            appId      : 'YOUR_APP_ID', // App ID
-            channelUrl : '//WWW.YOUR_DOMAIN.COM/channel.html', // Channel File
+            appId      : 'fbchat', // App ID
+            channelUrl : '//fbchat.lazygyu.net', // Channel File
             status     : true, // check login status
             cookie     : true, // enable cookies to allow the server to access the session
             xfbml      : true  // parse XFBML
@@ -35,6 +35,6 @@
     <h1>Facebook group chat for pg</h1>
     <p>페이스북 그룹 채팅입니다.</p>
     <p>아래 버튼을 눌러 로그인 해 주세요</p>
-
+    <div class="fb-login-button">Facebook 로그인하기</div>
   </body>
 </html>
