--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,8 @@
     <script type="text/javascript">
     	 window.fbAsyncInit = function() {
           FB.init({
-            appId      : 'YOUR_APP_ID', // App ID
-            channelUrl : '//WWW.YOUR_DOMAIN.COM/channel.html', // Channel File
+            appId      : '330600707030353', // App ID
+            channelUrl : '/fbchat.lazygyu.net', // Channel File
             status     : true, // check login status
             cookie     : true, // enable cookies to allow the server to access the session
             xfbml      : true  // parse XFBML
