--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,7 +85,7 @@
     <div id="beforeLogin">
 	    <p>페이스북 그룹 채팅입니다.</p>
 	    <p>아래 버튼을 눌러 로그인 해 주세요</p>
-	    <div class="fb-login-button" scope='user_groups,friend_groups'>Facebook 로그인하기</div>
+	    <div class="fb-login-button" scope='user_groups'>Facebook 로그인하기</div>
 	</div>
 	<div id="afterLogin">
 		<p><img id="userIcon" /> <span id="username"></span></p>
