--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,10 @@
                   for(var i=0; i < response.length; i++){
                     console.log(response[i].name);
                     groups.push(response[i]);
-                    var li = makeEl("li", {}, response.name);
+                    var li = makeEl("li");
+                    li.appendChild( makeEl("img", {"className":"groupIcon", "src":response[i].icon}) );
+                    li.appendChild( makeEl("span", {"className":"groupTitle"}, response[i].name));
+                    li.appendChild( makeEl("span", {"className":"groupDesc"}, response[i].description));
                     glist.appendChild(li);
                   }
                 });
