--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -9,9 +9,17 @@ a
 
 #groupList>li
   border:solid 1px transparent
+  cursor:pointer
+
 #groupList>li:hover
   border:solid 1px gray
   background:#eee
+
+#beforeLogin, #afterLogin
+	display:none
+
+#loadingDiv
+	display:block
 
 .groupIcon 
   width:16px
@@ -19,4 +27,6 @@ a
 .groupTitle 
   font-weight:bold
 .groupDesc
-  display:block;
+  display:block
+  padding-left:2em
+
