--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -2,7 +2,14 @@ body
   padding: 50px
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
 a
-  color: #00B7FF
+  text-decoration:none
+  color:#333
+a:hover
+	text-decoration:underline
+	color:black
+a:visit,a:active,a:link
+	text-decoration:none
+	color:#333
 
 #groupList
   list-style:none
@@ -26,6 +33,7 @@ a
   height:16px
 .groupTitle 
   font-weight:bold
+  padding-left:1em
 .groupDesc
   display:block
   padding-left:2em
