--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -83,7 +83,7 @@
 	                  $("groupMemberCount").innerHTML = response.length;
 	                  var tmp = $("memberList");
 	                  for(var i=0,l=response.length;i<l;i++){
-	                  	members.push(new User(response[i]));
+	                  	members.push(new Member(response[i]));
 	                  	tmp.appendChild(members[i].el);
 	                  }
 	                });
