--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -2,7 +2,19 @@
 <html>
 	<head>
 		<title><%= title %></title>
-		<link rel='stylesheet' href='/stylesheets/style.css' />
+		<style type="text/css">
+			body { margin:0; padding:0; color:#333;}
+			h1 { margin:0; background:black; color:silver; font-weight:bold; height:30px; }
+			div#groupInfo { border-bottom:solid 1px silver; height:25px; }
+			ul#memberList { 
+				position:fixed;
+				left:0;
+				top:56px;
+				bottom:0;
+				width:150px;
+				overflow-y:auto;
+			}
+		</style>
 		<script type="text/javascript">
 
 			var members = [];
