--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -13,6 +13,36 @@
 				bottom:0;
 				width:150px;
 				overflow-y:auto;
+				list-style:none;
+				padding:3px;
+				margin:0;
+				background:white;
+				border-right:solid 1px silver;
+			}
+			ul#memberList>li{
+				border-bottom:solid 1px silver;
+				background:white;
+			}
+			ul#memberList>li>img{
+				width:25px;
+				height:25px;
+			}
+
+			div#chatContainer {
+				position:fixed;
+				top:56px;
+				left:151px;
+				right:0;
+				bottom:50px;
+			}
+
+			div#inputContainer{
+				position:fixed;
+				bottom:0;
+				left:151px;
+				right:0;
+				height:49px;
+				border-top:solid 1px silver;
 			}
 		</style>
 		<script type="text/javascript">
