--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -3,8 +3,8 @@
 	<head>
 		<title><%= title %></title>
 		<style type="text/css">
-			body { margin:0; padding:0; color:#333;}
-			h1 { margin:0; background:black; color:silver; font-weight:bold; height:30px; }
+			body { margin:0; padding:0; color:#333; font-size:9pt;}
+			h1 { margin:0; background:black; color:silver; font-weight:bold; height:30px; padding:0; }
 			div#groupInfo { border-bottom:solid 1px silver; height:25px; }
 			ul#memberList { 
 				position:fixed;
