--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -24,8 +24,8 @@
 				background:white;
 			}
 			ul#memberList>li>img{
-				width:25px;
-				height:25px;
+				width:15px;
+				height:15px;
 			}
 
 			div#chatContainer {
@@ -153,8 +153,7 @@
 	<body>
 		<h1 id="groupTitle">Group</h1>
 		<div id="groupInfo">
-			<p id="groupDescription"></p>
-			회원 수 : <span id="groupMemberCount">0</span><br />
+			회원 수 : <span id="groupMemberCount">0</span>
 		</div>
 		<ul id="memberList">
 		</ul>
