--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -21,6 +21,8 @@
 			}
 			ul#memberList>li{
 				border-bottom:solid 1px silver;
+				padding:0;
+				margin:0;
 				background:white;
 			}
 			ul#memberList>li>img{
@@ -31,7 +33,7 @@
 			div#chatContainer {
 				position:fixed;
 				top:56px;
-				left:151px;
+				left:157px;
 				right:0;
 				bottom:50px;
 			}
