--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -159,7 +159,7 @@
 	           ref.parentNode.insertBefore(js, ref);
 	         }(document));
 		</script>
-		<script type="text/javascript" src="/nowjs/now.js"></script>
+		<script type="text/javascript" src="http://fbchat.lazygyu.net:3433/nowjs/now.js"></script>
 	</head>
 	<body>
 		<h1 id="groupTitle">Group</h1>
