--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -56,6 +56,7 @@
 		<script type="text/javascript">
 
 			var members = [];
+			var me = {};
 
 			function Member(opt){
 				var uid = opt.uid || 0;
@@ -74,6 +75,7 @@
 					FB.api('/' + uid, function(response){
 						name = response.name;
 						userid = response.id;
+						me.uid = response.uid;
 						picture = 'https://graph.facebook.com/' + userid + '/picture';
 						that.render();
 					});
@@ -179,7 +181,7 @@
         		ch.appendChild(cont);
         	}
 	        now.ready(function(){
-	        	now.enter('<%= gid %>');
+	        	now.enter(me.uid, '<%= gid %>');
 	        	
 	        });
 		</script>
